<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="@dimen/titleSize"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title"
        android:layout_marginTop="@dimen/titleMarginTop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:layout_centerInParent="true"
        android:textSize="@dimen/TextSize"
        android:id="@+id/start"
        style="@style/Button"/>

    <ImageView
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/imageMargin"
        android:src="@mipmap/main"
        android:contentDescription="@string/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/TextSize"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/start"
        style="@style/Button"
        android:text="@string/quit"
        android:layout_marginTop="@dimen/marginTen"/>

</RelativeLayout>